fixed spacing at the bottom of chat app

--- a/src/my-ui/chat-app.css
+++ b/src/my-ui/chat-app.css
@@ -80,7 +80,7 @@ body, html{
 }
 .chatrooms{
     text-align: center;
-    min-height: 75%;
+    min-height: 50%;
     width: 100%;
     margin: 0px;
     z-index: 0;
@@ -98,6 +98,7 @@ body, html{
     width:100%;
     margin: 0px;
     display: block;
+    font-size: .9rem;
 }
 .new-chat div{
     width: 90%;
@@ -185,7 +186,7 @@ body, html{
     width: 100%;
     min-height: 2em;
     border-radius: 10px;
-    font-size: larger;
+    font-size: .9rem;
     margin: 0px auto;
 }
 .show{
@@ -196,7 +197,7 @@ body, html{
     display: none;
 }
 
-@media screen and (max-width: 775px) {
+@media screen and (max-width: 625px) {
     .grid{
         display: grid;
         height: 100%;
@@ -236,24 +237,25 @@ body, html{
 
     .logorreturn{
         display: block;
+        position: relative;
         max-width: 100%;
         background-color: rgb(185, 185, 185);
-        padding-bottom: 10px;
     }
     .logout{
         display: inline-block;
-        width: 20%;
-        margin-right: 50%;
-        margin-left: 1%;
-        font-size: .8rem;
+        width: 100%;
+        max-width: 25%;
+        margin-right: 48%;
+        font-size: .5rem;
     }
     .return{
         display: inline-block;
-        width: 25%;
+        width: 100%;
+        max-width: 25%;
         margin: 0px;
         text-align: right;
         color: rgb(82, 81, 81);
-        font-size: .8rem;
+        font-size: .5rem;
     }
     .new-chat{
         width: 100%;
@@ -268,6 +270,15 @@ body, html{
         background-color: white;
     }
     .chatrooms{
-        min-height: 50%;
+        min-height: 25%;
+        margin: 2%;
+        display: inline-block;
+    }
+
+    #message{
+        width: 60%;
+        margin: 0px auto; 
+        display: block;
+        font-size: .75rem;
     }
 }
